added css and icon to sidebar

--- a/client/src/components/Sidebar/Sidebar.css
+++ b/client/src/components/Sidebar/Sidebar.css
@@ -1,7 +1,22 @@
 .Sidebar {
   background-color: white;
   padding: 24px 32px;
-  /* font: 15px 'Calibre-Regular'; */
-  font: 15px 'Courier New', Courier, monospace;
-  /* font-family: 'Courier New', Courier, monospace; */
+  font: 10px;
+  position: sticky;
+  top: 2em;
+}
+
+.sidebar-lines {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 8px;
+}
+
+.sidebar-text {
+  padding: 6px 0;
+}
+
+.icon {
+  height: 22px;
+  margin: 4px 24px 4px 0;
 }
