--- a/client/src/components/Suggestions/SuggestionsContainer.css
+++ b/client/src/components/Suggestions/SuggestionsContainer.css
@@ -4,7 +4,7 @@
 
 .Suggestions {
   display: grid;
-  flex-direction: row;
+  grid-gap: 2em;
   grid-template-columns: 1fr 1fr;
   grid-auto-rows: 250px;
 }
