--- a/client/src/components/Suggestions/SuggestionsContainer.css
+++ b/client/src/components/Suggestions/SuggestionsContainer.css
@@ -2,9 +2,21 @@
   border-top: 1px solid black;
 }
 
-.Suggestions {
-  display: grid;
-  grid-gap: 2em;
-  grid-template-columns: 1fr 1fr;
-  grid-auto-rows: 250px;
+@media (min-width: 300px) {
+  .Suggestions {
+    display: grid;
+    grid-gap: 2em;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 250px;
+    margin: 2em 0em;
+  }
+}
+
+@media (min-width: 900px) {
+  .Suggestions {
+    display: grid;
+    grid-gap: 2em;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 250px;
+  }
 }
